# daily-report-epaper-ha

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  esphome.yaml
src/: api_error.rs  cfg.rs  cron.rs  lib.rs  main.rs  middleware.rs  model.rs  telemetry.rs
src/routes/: epaper_page.rs  health_check.rs  mod.rs
tests/api/: helpers.rs
