[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
axum = "0.7.6"
hyper = "1.4.1"
tower = { version = "0.5.0", features = [] }
tower-http = { version = "0.6.1", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.89"
thiserror = "1.0.64"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
time = { version = "0.3.37", features = ["serde", "serde-human-readable", "serde-well-known", "macros", "parsing", "local-offset"] }
time-tz = { version = "2.0.0", features = ["posix-tz", "system"] }
icalendar = { version = "0.16.10", features = ["serde", "serde_json"] }
ical = { version = "0.11.0", features = ["serde", "serde-derive", "generator"] }
itertools = "0.13.0"
tokio-cron-scheduler = { version = "0.13.0", features = ["english", "tokio-postgres", "tracing-subscriber", "signal", "english-to-cron", "log"] }
image = { version = "0.25.5", features = ["png"] }
