[package]
name = "server"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "^1.44", features = ["full"] }
axum = "^0.8"
hyper = "^1.6"
tower = { version = "^0.5", features = [] }
tower-http = { version = "^0.6", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.15", features = ["v7", "serde"] }
dotenvy = "0.15"

anyhow = "1.0"
thiserror = "2.0"
imageproc = "0.25"
ab_glyph = "0.2"
time = { version = "0.3", features = ["serde", "serde-human-readable", "serde-well-known", "macros", "parsing", "local-offset"] }
time-tz = { version = "2.0", features = ["posix-tz", "system"] }
icalendar = { version = "0.16", features = ["serde", "serde_json"] }
ical = { version = "0.11", features = ["serde", "serde-derive", "generator"] }
itertools = "0.14"
tokio-cron-scheduler = { version = "0.13", features = ["english", "tokio-postgres", "tracing-subscriber", "signal", "english-to-cron", "log"] }
image = { version = "0.25", features = ["png"] }
